# chequer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/chequer/: __main__.py  branding.py  workdays.py
src/chequer/tui/: __init__.py  chequer_app.py  chequer_app.tcss
src/chequer/tui/screens/: __init__.py  main_menu.py  new_transaction.py  search_screen.py  upcoming_screen.py  utils.py  yes_no_modal.py  yes_no_modal.tcss
